--- a/app/views/shouts/index.html.erb
+++ b/app/views/shouts/index.html.erb
@@ -1,7 +1,7 @@
 <% for shout in @shouts %>
 <div id="shout-<%= shout.id %>">
     <p><%= shout.user_id %>: <%= shout.content %></p>
-    <p>posted <%= time_ago_in_words shout.created_at %> ago</p>
+    <p>posted <%= shout_date shout %></p>
 </div>
 <% end %>
 
