shout validations and display errors

--- a/app/views/shouts/index.html.erb
+++ b/app/views/shouts/index.html.erb
@@ -1,3 +1,6 @@
+<h1>All Shouts</h1>
+<p><%= link_to '+ Post a Shout', new_shout_path %></p>
+
 <% for shout in @shouts %>
 <div id="shout-<%= shout.id %>">
     <p><%= shout.user_id %>: <%= shout.content %></p>
