--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,6 +7,18 @@
     
     ID: <%= @user.id %><br>
     Email: <%= @user.email %><br>
+    
+    <br>
+    
+    <% if @user == User.first %>
+    This is you!
+    <% else %>
+        <% if User.first.follows?(@user) %>
+        <%= link_to 'Unfollow', unfollow_path(follow: @user.id), method: :delete %>
+        <% else %>
+        <%= link_to 'Follow', follow_path(follow: @user.id), method: :post %>
+        <% end %>
+    <% end %>
 </div>
 
 <h2><%= @user.username %>'s Shouts</h2>
