has secure password for User

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -23,8 +23,8 @@
 
     <% if @user.new_record? %>
     <div>
-        <%= f.label :password_digest, 'Password' %><br>
-        <%= f.password_field :password_digest %>
+        <%= f.label :password, 'Password' %><br>
+        <%= f.password_field :password %>
     </div>
     <% end %>
     
